--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,32 +4,21 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     
-    {
-        "type": "extendscript-debug",
-        "request": "launch",
-        "name": "@ checkPrefs.jsx",
-        "program": "${workspaceFolder}/@ checkPrefs.jsx",
-        "stopOnEntry": false
-    },
-
-     
+        {
+            "type": "extendscript-debug",
+            "request": "launch",
+            "name": "RUN",
+            "program": "${workspaceFolder}/Text - change text color by line.jsx",
+            "stopOnEntry": false
+        },
+        {
+            "type": "extendscript-debug",
+            "request": "launch",
+            "name": "@ checkPrefs.jsx",
+            "program": "${workspaceFolder}/@ checkPrefs.jsx",
+            "stopOnEntry": false
+        },
         {
             "type": "extendscript-debug",
             "request": "launch",
@@ -37,16 +26,5 @@
             "program": "${workspaceFolder}/@ getDesc.jsx",
             "stopOnEntry": false
         },
-
-
-
-    {
-        "type": "extendscript-debug",
-        "request": "launch",
-        "name": "RUN",
-        "program": "${workspaceFolder}/Layers - relink layers 2.jsx",
-        "stopOnEntry": false
-    },
-
     ]
 }
